--- a/docs/_includes/page-header.html
+++ b/docs/_includes/page-header.html
@@ -1,7 +1,8 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="#" class="btn">View on GitHub</a>
-  <a href="#" class="btn">Download .zip</a>
-  <a href="#" class="btn">Download .tar.gz</a>
+  <div><img src="preview.png" style="margin-bottom: 60px; max-width: 90%;" /></div>
+  <a href="https://github.com/Mikescher/AlephNote" class="btn">View on GitHub</a>
+  <a href="https://github.com/Mikescher/AlephNote/archive/master.zip" class="btn">Download source</a>
+  <a href="https://github.com/Mikescher/AlephNote/releases/latest" class="btn">Download latest release</a>
 </section>
