[gh-page] Add "windows" to download button

--- a/docs/_includes/page-header.html
+++ b/docs/_includes/page-header.html
@@ -4,5 +4,5 @@
   <div><img src="preview.png" style="margin-bottom: 60px; max-width: 90%;" /></div>
   <a href="https://github.com/Mikescher/AlephNote" class="btn">View on GitHub</a>
   <a href="https://github.com/Mikescher/AlephNote/archive/master.zip" class="btn">Download source</a>
-  <a href="https://github.com/Mikescher/AlephNote/releases/latest" class="btn">Download latest release</a>
+  <a href="https://github.com/Mikescher/AlephNote/releases/latest" class="btn">Download latest release (Windows)</a>
 </section>
