Remove CSharpUtils from AlephNote.App project

--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -6,8 +6,8 @@
 		xmlns:settings="clr-namespace:AlephNote.Settings"
 		xmlns:converter="clr-namespace:AlephNote.WPF.Converter"
 		xmlns:windows="clr-namespace:AlephNote.WPF.Windows"
-		xmlns:controls="clr-namespace:MSHC.WPF.Controls;assembly=CSharpUtils"
-		xmlns:mext="clr-namespace:MSHC.WPF.Extensions.MarkupExtensions;assembly=CSharpUtils"
+		xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
+		xmlns:mext="clr-namespace:AlephNote.WPF.MarkupExtensions"
 		xmlns:pi="clr-namespace:AlephNote.PluginInterface;assembly=AlephNote.PluginInterface"
 		mc:Ignorable="d" 
 		d:DataContext="{d:DesignInstance windows:SettingsWindowViewmodel}"
