--- a/Source/AlephNote.App/WPF/Windows/SyncErrorDialog.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SyncErrorDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<controls:DialogWindow x:Class="AlephNote.WPF.Windows.SyncErrorDialog"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:controls="clr-namespace:MSHC.WPF.Controls;assembly=CSharpUtils"
+		xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
 		WindowStartupLocation="CenterOwner"
 		Title="SyncErrorDialog" Height="359" Width="541">
 	<Grid>
