net core (WIP-5)

--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -11,8 +11,8 @@
 		xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
 		xmlns:ctrl="clr-namespace:AlephNote.WPF.Controls"
 		xmlns:tb="http://www.hardcodet.net/taskbar"
-		xmlns:mext="clr-namespace:AlephNote.WPF.MarkupExtensions"
-		xmlns:settings="clr-namespace:AlephNote.Settings"
+		xmlns:settings="clr-namespace:AlephNote.Settings;assembly=AlephNote.Common"
+		xmlns:mext="clr-namespace:MSHC.WPF.Extensions.MarkupExtensions;assembly=CSharpUtils"
 		xmlns:pi="clr-namespace:AlephNote.PluginInterface;assembly=AlephNote.PluginInterface"
 		mc:Ignorable="d" 
 		Icon="/Resources/IconMain.png"
