--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -3,7 +3,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:settings="clr-namespace:AlephNote.Settings"
+		xmlns:settings="clr-namespace:AlephNote.Settings;assembly=AlephNote.Common"
 		xmlns:converter="clr-namespace:AlephNote.WPF.Converter"
 		xmlns:windows="clr-namespace:AlephNote.WPF.Windows"
 		xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
